--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
+/* @layer base{
   @font-face {
     font-family: "Swiss 721 Cn BT";
     font-weight: 400;
@@ -32,7 +32,7 @@
 
 *{
   font-family: "Swiss 721 Cn BT";
-}
+} */
 
 html {
   @apply scroll-smooth h-full bg-gray-50;
